[project]
name = "traderbot"
version = "0.1.0"
description = "AI/agent-based crypto trading bot — paper-first, audit-logged"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "ccxt>=4.5.50",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]
